Added PASService web service reference

--- a/PASClient/App.config
+++ b/PASClient/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="FileHandlerImplPortBinding" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://127.0.0.1:9876/passervice" binding="basicHttpBinding"
+                bindingConfiguration="FileHandlerImplPortBinding" contract="PASService.IFileHandlerSEI"
+                name="FileHandlerImplPort" />
+        </client>
+    </system.serviceModel>
 </configuration>
